--- a/server/views/Workout/list.ejs
+++ b/server/views/Workout/list.ejs
@@ -1,43 +1,45 @@
 <%- include ../Partials/header.ejs%>
 <%- include ../Partials/main_nav.ejs%>
-<!--Book Database-->
+<!-- Workout Database -->
 <main class="container">
     <div class="row">
         <div class="offset-md-1 col-md-10">
             <h1><%= title %></h1>
             <br>
-            <a href="/bookslist/add" class="btn btn-primary" role="button">
-                <i class="fas fa-plus-circle"></i> Add Book
+            <a href="/workouts-list/add" class="btn btn-primary" role="button">
+                <i class="fas fa-plus-circle"></i> Add Workout
             </a>
             <table class="table table-bordered table-striped table-hover">
                 <tr class="d-flex">
-                    <th class="text-center col-2">Name</th>
-                    <th class="text-center col-2">Author</th>
-                    <th class="text-center col-1">Published</th>
-                    <th class="col-4">Description</th>
-                    <th class="text-center col-1">Price</th>
+                    <th class="text-center col-2">Date</th>
+                    <th class="text-center col-2">Exercise</th>
+                    <th class="text-center col-1">Sets</th>
+                    <th class="text-center col-1">Reps</th>
+                    <th class="text-center col-1">Weight</th>
+                    <th class="text-center col-2">Focus</th>
                 </tr>
-                <% for(let count=0;count<BookList.length;count++) { %>
+                <% for(let count = 0; count < WorkoutList.length; count++) { %>
                 <tr class="d-flex">
-                    <td class="text-center col-2"><%= BookList[count].Name %></td>
-                    <td class="text-center col-2"><%= BookList[count].Author %></td>
-                    <td class="text-center col-1"><%=BookList[count].Published%></td>
-                    <td class="col-4"><%= BookList[count].Description %> </td>
-                    <td class="text-center col-1"><%= BookList[count].Price %></td>
+                    <td class="text-center col-2"><%= WorkoutList[count].date %></td>
+                    <td class="text-center col-2"><%= WorkoutList[count].exercise %></td>
+                    <td class="text-center col-1"><%= WorkoutList[count].sets %></td>
+                    <td class="text-center col-1"><%= WorkoutList[count].reps %></td>
+                    <td class="text-center col-1"><%= WorkoutList[count].weight %></td>
+                    <td class="text-center col-2"><%= WorkoutList[count].focus %></td>
                     <td class="text-center col-1">
-                        <a href="/bookslist/edit/<%= BookList[count]._id%>"
+                        <a href="/workouts-list/edit/<%= WorkoutList[count]._id %>"
                             class="btn btn-primary btn-sm">
-                        <i class="fas fa-pencil-alt"></i>Edit
+                        <i class="fas fa-pencil-alt"></i> Edit
                     </a>
                     </td>
                     <td class="text-center col-1">
-                        <a href="/bookslist/delete/<%= BookList[count]._id%>"
+                        <a href="/workouts-list/delete/<%= WorkoutList[count]._id %>"
                             class="btn btn-danger btn-sm">
-                        <i class="fas fa-trash-alt"></i>Delete
+                        <i class="fas fa-trash-alt"></i> Delete
                     </a>
                     </td>
                 </tr>    
-                    <%} %>
+                <% } %>
             </table>
         </div>
     </div>
