--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -40,12 +40,12 @@
                 <i class="fa-solid fa-gears"></i> Service</a>
           </li>
           <li class="nav-item">
-            <% if(title=="Books") { %>
-              <a class="nav-link active" href="/bookslist">
+            <% if(title=="Workouts") { %>
+              <a class="nav-link active" href="/workouts-list">
             <% } else {%>
-              <a class="nav-link" href="/bookslist">
+              <a class="nav-link" href="/workouts-list">
             <% } %>  
-            <i class="fa-solid fa-book"></i> Books</a>
+            <i class="fa-solid fa-dumbbell"></i> Workouts</a>
           </li>
           <li class="nav-item"></li>
           <% if(title=="Contact Us") { %>
