made some tentative designs concepts

--- a/server/views/Partials/header.ejs
+++ b/server/views/Partials/header.ejs
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/Content/app.css' />
-    <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"/>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/Script/app.js"></script>
-
+    <!-- Link to your custom CSS -->
+    <link rel="stylesheet" href="/Content/Design.css" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <!-- FontAwesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet" />
+    <script src="/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
