--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -1,61 +1,66 @@
-<!--NavBar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">INFR3120 Project</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <% if(title=="Home") { %>
-              <a class="nav-link active" href="/home">
-            <% } else {%>
-              <a class="nav-link" href="/home">
-            <% } %>  
-            <i class="fa-solid fa-house-chimney-user"></i> Home</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="About us") { %>
-              <a class="nav-link active" href="/aboutus">
-            <% } else {%>
-              <a class="nav-link" href="/aboutus">  
-            <% } %>       
-              <i class="fa-solid fa-circle-info"></i> AboutUs</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="Products") { %>
-              <a class="nav-link active" href="/products">
-            <% } else {%>
-              <a class="nav-link" href="/products">
-            <% } %>    
-              <i class="fa-brands fa-elementor"></i> Products</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="Service") { %>
-              <a class="nav-link active" href="/service">
-            <% } else {%> 
-              <a class="nav-link" href="/service">
-            <% } %>  
-                <i class="fa-solid fa-gears"></i> Service</a>
-          </li>
-          <li class="nav-item">
-            <% if(title=="Workouts") { %>
-              <a class="nav-link active" href="/workouts-list">
-            <% } else {%>
-              <a class="nav-link" href="/workouts-list">
-            <% } %>  
-            <i class="fa-solid fa-dumbbell"></i> Workouts</a>
-          </li>
-          <li class="nav-item"></li>
+<!-- Centered Header -->
+<header class="header-section">
+  <h1 class="text-center">Workouts</h1>
+</header>
+
+<!-- Centered NavBar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
+  <div class="container">
+    <a class="navbar-brand" href="/">Workout Tracker!</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto">
+        <li class="nav-item">
+          <% if(title=="Home") { %>
+            <a class="nav-link active" href="/home">
+          <% } else {%>
+            <a class="nav-link" href="/home">
+          <% } %>
+          <i class="fa-solid fa-house-chimney-user"></i> Home</a>
+        </li>
+        <li class="nav-item">
+          <% if(title=="About us") { %>
+            <a class="nav-link active" href="/aboutus">
+          <% } else {%>
+            <a class="nav-link" href="/aboutus">
+          <% } %>
+          <i class="fa-solid fa-circle-info"></i> AboutUs</a>
+        </li>
+        <li class="nav-item">
+          <% if(title=="Products") { %>
+            <a class="nav-link active" href="/products">
+          <% } else {%>
+            <a class="nav-link" href="/products">
+          <% } %>
+          <i class="fa-brands fa-elementor"></i> Products</a>
+        </li>
+        <li class="nav-item">
+          <% if(title=="Service") { %>
+            <a class="nav-link active" href="/service">
+          <% } else {%>
+            <a class="nav-link" href="/service">
+          <% } %>
+          <i class="fa-solid fa-gears"></i> Service</a>
+        </li>
+        <li class="nav-item">
+          <% if(title=="Workouts") { %>
+            <a class="nav-link active" href="/workouts-list">
+          <% } else {%>
+            <a class="nav-link" href="/workouts-list">
+          <% } %>
+          <i class="fa-solid fa-dumbbell"></i> Workouts</a>
+        </li>
+        <li class="nav-item">
           <% if(title=="Contact Us") { %>
             <a class="nav-link active" href="/contactus">
-          <% } else {%>  
+          <% } else {%>
             <a class="nav-link" href="/contactus">
-          <% } %> 
+          <% } %>
           <i class="fa-solid fa-address-card"></i> ContactUs</a>
-          </li>
-        </ul>
-      </div>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
