--- a/server/views/Partials/main_nav.ejs
+++ b/server/views/Partials/main_nav.ejs
@@ -1,15 +1,13 @@
 <!-- Centered Header -->
 <header class="header-section">
-  <h1 class="text-center">Workouts</h1>
+  <h1 class="text-center">Workout Tracker</h1>
 </header>
 
 <!-- Centered NavBar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
   <div class="container">
-    <a class="navbar-brand" href="/">Workout Tracker!</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+   
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
