--- a/server/views/Workout/edit.ejs
+++ b/server/views/Workout/edit.ejs
@@ -1,43 +1,43 @@
 <%- include ../Partials/header.ejs%>
 <%- include ../Partials/main_nav.ejs%>
-<!-- Content for the Edit Operation -->
-<div class="container">
-    <div class="row">
-        <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
-            <form class="form" method="POST">
-                <div class="form-group">
-                    <label for="dateTextField">Workout Date</label>
-                    <input type="date" class="form-control" id="dateTextField" placeholder="Enter the Workout Date" name="date" value="<%= Workout.date %>" required>
-                </div>
-                <div class="form-group">
-                    <label for="exerciseTextField">Exercise Name</label>
-                    <input type="text" class="form-control" id="exerciseTextField" placeholder="Enter the Exercise Name" name="exercise" value="<%= Workout.exercise %>" required>
-                </div>
-                <div class="form-group">
-                    <label for="setsTextField">Number of Sets</label>
-                    <input type="number" class="form-control" id="setsTextField" placeholder="Enter the Number of Sets" name="sets" value="<%= Workout.sets %>" required>
-                </div>
-                <div class="form-group">
-                    <label for="repsTextField">Number of Reps</label>
-                    <input type="number" class="form-control" id="repsTextField" placeholder="Enter the Number of Reps" name="reps" value="<%= Workout.reps %>" required>
-                </div>
-                <div class="form-group">
-                    <label for="weightTextField">Weight Used (lbs)</label>
-                    <input type="number" class="form-control" id="weightTextField" placeholder="Enter the Weight Used" name="weight" value="<%= Workout.weight %>" required>
-                </div>
-                <div class="form-group">
-                    <label for="focusTextField">Focus Area</label>
-                    <input type="text" class="form-control" id="focusTextField" placeholder="Enter the Focus Area (e.g., Legs, Arms)" name="focus" value="<%= Workout.focus %>" required>
-                </div>
-                <button class="btn btn-primary" type="submit">Submit
-                    <i class="fas fa-edit"></i>
-                </button>  
-                <button class="btn btn-warning" type="reset">Cancel
-                    <i class="fas fa-undo"></i>
-                </button>    
-            </form>
-        </div>
+<!-- Content for Edit Page -->
+<div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="col-md-6">
+        <h1 class="text-center"><%= title %></h1>
+        <form class="form" method="POST">
+            <div class="form-group mb-3">
+                <label for="dateTextField">Workout Date</label>
+                <input type="date" class="form-control" id="dateTextField" value="<%= Workout.date %>" name="date" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="exerciseTextField">Exercise Name</label>
+                <input type="text" class="form-control" id="exerciseTextField" value="<%= Workout.exercise %>" name="exercise" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="setsTextField">Number of Sets</label>
+                <input type="number" class="form-control" id="setsTextField" value="<%= Workout.sets %>" name="sets" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="repsTextField">Number of Reps</label>
+                <input type="number" class="form-control" id="repsTextField" value="<%= Workout.reps %>" name="reps" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="weightTextField">Weight Used (lbs)</label>
+                <input type="number" class="form-control" id="weightTextField" value="<%= Workout.weight %>" name="weight" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="focusTextField">Focus Area</label>
+                <input type="text" class="form-control" id="focusTextField" value="<%= Workout.focus %>" name="focus" required>
+            </div>
+            <div class="d-flex justify-content-between">
+                <button class="btn btn-primary" type="submit">
+                    Submit <i class="fas fa-check"></i>
+                </button>
+                <button class="btn btn-warning" type="reset">
+                    Cancel <i class="fas fa-times"></i>
+                </button>
+            </div>
+        </form>
     </div>
 </div>
 <%- include ../Partials/footer.ejs%>
