--- a/server/views/Workout/list.ejs
+++ b/server/views/Workout/list.ejs
@@ -1,47 +1,47 @@
 <%- include ../Partials/header.ejs%>
 <%- include ../Partials/main_nav.ejs%>
 <!-- Workout Database -->
-<main class="container">
-    <div class="row">
-        <div class="offset-md-1 col-md-10">
-            <h1><%= title %></h1>
-            <br>
-            <a href="/workouts-list/add" class="btn btn-primary" role="button">
-                <i class="fas fa-plus-circle"></i> Add Workout
-            </a>
-            <table class="table table-bordered table-striped table-hover">
-                <tr class="d-flex">
-                    <th class="text-center col-2">Date</th>
-                    <th class="text-center col-2">Exercise</th>
-                    <th class="text-center col-1">Sets</th>
-                    <th class="text-center col-1">Reps</th>
-                    <th class="text-center col-1">Weight</th>
-                    <th class="text-center col-2">Focus</th>
+<div class="d-flex flex-column align-items-center vh-100 justify-content-center">
+    <h1 class="text-center mb-4"><%= title %></h1>
+    <a href="/workouts-list/add" class="btn btn-primary mb-3" role="button">
+        <i class="fas fa-plus-circle"></i> Add Workout
+    </a>
+    <div class="table-responsive w-75">
+        <table class="table table-bordered table-striped table-hover text-center">
+            <thead class="table-dark">
+                <tr>
+                    <th>Date</th>
+                    <th>Exercise</th>
+                    <th>Sets</th>
+                    <th>Reps</th>
+                    <th>Weight</th>
+                    <th>Focus</th>
+                    <th>Actions</th>
                 </tr>
+            </thead>
+            <tbody>
                 <% for(let count = 0; count < WorkoutList.length; count++) { %>
-                <tr class="d-flex">
-                    <td class="text-center col-2"><%= WorkoutList[count].date %></td>
-                    <td class="text-center col-2"><%= WorkoutList[count].exercise %></td>
-                    <td class="text-center col-1"><%= WorkoutList[count].sets %></td>
-                    <td class="text-center col-1"><%= WorkoutList[count].reps %></td>
-                    <td class="text-center col-1"><%= WorkoutList[count].weight %></td>
-                    <td class="text-center col-2"><%= WorkoutList[count].focus %></td>
-                    <td class="text-center col-1">
-                        <a href="/workouts-list/edit/<%= WorkoutList[count]._id %>"
-                            class="btn btn-primary btn-sm">
-                        <i class="fas fa-pencil-alt"></i> Edit
-                    </a>
+                <tr>
+                    <td><%= WorkoutList[count].date %></td>
+                    <td><%= WorkoutList[count].exercise %></td>
+                    <td><%= WorkoutList[count].sets %></td>
+                    <td><%= WorkoutList[count].reps %></td>
+                    <td><%= WorkoutList[count].weight %></td>
+                    <td><%= WorkoutList[count].focus %></td>
+                    <td>
+                        <div class="d-flex justify-content-center gap-2">
+                            <a href="/workouts-list/edit/<%= WorkoutList[count]._id %>" class="btn btn-primary btn-sm">
+                                <i class="fas fa-pencil-alt"></i> Edit
+                            </a>
+                            <a href="/workouts-list/delete/<%= WorkoutList[count]._id %>" class="btn btn-danger btn-sm">
+                                <i class="fas fa-trash-alt"></i> Delete
+                            </a>
+                        </div>
                     </td>
-                    <td class="text-center col-1">
-                        <a href="/workouts-list/delete/<%= WorkoutList[count]._id %>"
-                            class="btn btn-danger btn-sm">
-                        <i class="fas fa-trash-alt"></i> Delete
-                    </a>
-                    </td>
-                </tr>    
+                </tr>
                 <% } %>
-            </table>
-        </div>
+            </tbody>
+        </table>
     </div>
-</main>
+</div>
 <%- include ../Partials/footer.ejs%>
