--- a/server/views/Partials/header.ejs
+++ b/server/views/Partials/header.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <!-- Link to your custom CSS -->
+    <!-- Link to custom CSS -->
     <link rel="stylesheet" href="/Content/Design.css" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
