--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -2,5 +2,6 @@
 <%- include Partials/main_nav.ejs%>
     <!--Main content-->
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h2>Welcome to <%= title %></h2>
+    <p> Welcome to the workout tracking website, over here you can head over to the workout tab above and create your own routine.
 <%- include Partials/footer.ejs%>
