--- a/server/views/Workout/add.ejs
+++ b/server/views/Workout/add.ejs
@@ -4,7 +4,7 @@
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="col-md-6">
         <h1 class="text-center"><%= title %></h1>
-        <form class="form" method="POST">
+        <form class="form" method="POST" action="/workouts-list/add">
             <div class="form-group mb-3">
                 <label for="dateTextField">Workout Date</label>
                 <input type="date" class="form-control" id="dateTextField" placeholder="Enter the Workout Date" name="date" required>
