Fixed edit and delete button

--- a/server/views/Workout/add.ejs
+++ b/server/views/Workout/add.ejs
@@ -34,7 +34,7 @@
                     Submit <i class="fas fa-check"></i>
                 </button>
                 <button class="btn btn-warning" type="reset">
-                    Cancel <i class="fas fa-times"></i>
+                    Erase <i class="fas fa-times"></i>
                 </button>
             </div>
         </form>
