--- a/public/Content/Design.css
+++ b/public/Content/Design.css
@@ -4,7 +4,7 @@
     padding: 20px 0;
     text-align: center;
     margin-bottom: 10px;
-    font-family: fantasy;
+    font-family: 'Montserrat', sans-serif;
     margin-top: 20px; 
     padding-top: 10px;
   }
@@ -113,3 +113,13 @@
     align-items: center;
 
 }
+
+footer
+ {
+    background-color: whitesmoke;
+    padding: 20px 0;
+    text-align: center;
+    margin-bottom: 10px;
+    margin-top: 20px; 
+    padding-top: 10px;
+  }
